purchase handling - minestom side